--- a/trunk/ch.jester.reportengine.jasper.impl/reports/PlayerList.jrxml
+++ b/trunk/ch.jester.reportengine.jasper.impl/reports/PlayerList.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="PlayerList" language="groovy" pageWidth="612" pageHeight="792" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" resourceBundle="nl1/i18n">
-	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="0"/>
+	<property name="ireport.zoom" value="2.1435888100000016"/>
+	<property name="ireport.x" value="105"/>
 	<property name="ireport.y" value="0"/>
 	<style name="table">
 		<box>
@@ -117,18 +117,18 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{firstName}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="284" y="1" width="100" height="20"/>
+				<reportElement x="284" y="2" width="100" height="20"/>
 				<textElement>
 					<font size="8"/>
 				</textElement>
-				<textFieldExpression class="java.lang.Integer"><![CDATA[$F{nationalCode}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.Integer"><![CDATA[$F{nationalCode}==null?" ":$F{nationalCode}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="398" y="1" width="100" height="20"/>
 				<textElement>
 					<font size="8"/>
 				</textElement>
-				<textFieldExpression class="java.lang.Integer"><![CDATA[$F{fideCode}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.Integer"><![CDATA[$F{fideCode}==null?" ":$F{fideCode}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
